hphp/hack/test/typecheck/expression_trees/potential_void_return.php.exp
File "potential_void_return.php", line 15, characters 5-469:
Invalid return type (Typing[4336])
  File "potential_void_return.php", line 15, characters 5-469:
  Expected `void` because this function does not always return a value
  File "expr_tree.hhi", line 42, characters 68-78:
  But got `ExampleVoid`
  File "expr_tree.hhi", line 155, characters 44-49:
    via this generic `TInfer`
